--- a/details.html
+++ b/details.html
@@ -46,7 +46,7 @@
                         </li>
 
                         <li>
-                            <a href="#">
+                            <a href="cart.html">
                                 <i class="large material-icons">shopping_cart</i>
                             </a>
                         </li>
