--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
 
             <li>
-              <a href="#">
+              <a href="cart.html">
                 <i class="large material-icons">shopping_cart</i>
               </a>
             </li>
