--- a/cart.html
+++ b/cart.html
@@ -108,7 +108,7 @@
                    <h3>Your cart</h3>
                 </div>
                 <div class="col s12 m6 right-align">
-                   <a href="" class="continueShopping">Continuing shopping</a>
+                   <a href="list.html" class="continueShopping">Continuing shopping</a>
                 </div>
             </div>
             <div class="row">
